Alguns assets novos.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul>
             <li><a href="#tabPeriodica">Como funciona a tabela periódica?</a></li>
             <li><a href="#equacaoFormulario">Monte sua equação</a></li>
-            <li><a href=""></a></li>
+            <li><a href="#contato">Contato</a></li>
         </ul>
     </nav>
     <h2>Informações relevantes</h2>
@@ -68,10 +68,10 @@
             <p id="resultado"></p>
         </form>
     </section>
-    <footer>
+    <footer id="contato">
         <ul>
             <li>Desenvolvido por Eduardo Luís</li>
-            <li>Celular: &lpar;11&rpar;&nbsp;98715-8230</li>
+            <li>Celular: +55&nbsp;&lpar;11&rpar;&nbsp;98715-8230</li>
             <li>Estudante de Engenharia da Computação</li>
         </ul>
     </footer>
