--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="assets/virus-svgrepo-com.svg">
+    <link rel="icon" href="assets/stoichiometry-logo.svg">
     <title>Estequiometria</title>
 </head>
 
@@ -36,29 +36,7 @@
             </p>
         </article>
     </section>
-    <!-- <section>
-        <form id="elementosFormulario">
-            action="https://httpbin.org/get" method="get"
-            <p>
-                <label for="elemento1">Selecione um elemento:</label>
-                <select name="elemento1" id="elemento1">
-                    <option value="H">Hidrogênio</option>
-                    <option value="O">Oxigênio</option>
-                </select>
-            </p>
-            <p>
-                <label for="elemento2">Selecione um segunndo elemento:</label>
-                <select name="elemento2" id="elemento2">
-                    <option value="H">Hidrogênio</option>
-                    <option value="O">Oxigênio</option>
-                </select>
-            </p>
-            <input type="submit" value="Enviar">
-            <p id="resultado"></p>
-            <p id="equacao"></p>
-        </form>
-    </section> -->
-    <section>
+    <section class="formulario">
         <form class="eqForm" id="equacaoFormulario">
             <p>
                 <label for="equacao">Digite a equação química:</label>
