Modificação em alguns textos presentes no arquivo HTML. Início da estilização com CSS.

--- a/index.html
+++ b/index.html
@@ -14,23 +14,25 @@
         <h1>Bem-vindo ao site de Estequiometria!</h1>
         <p>O intuito deste site é ajudar os estudantes a realizarem ou verificarem equações de elementos da tabela
             periódica.</p>
+
+        <nav>
+            <ul>
+                <li><a href="#tabPeriodica">Como funciona a tabela periódica?</a></li>
+                <li><a href="#equacaoFormulario">Monte sua equação</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
+        </nav>
     </header>
-    <nav>
-        <ul>
-            <li><a href="#tabPeriodica">Como funciona a tabela periódica?</a></li>
-            <li><a href="#equacaoFormulario">Monte sua equação</a></li>
-            <li><a href="#contato">Contato</a></li>
-        </ul>
-    </nav>
-    <h2>Informações relevantes</h2>
+
     <section class="tabelaPeriodica">
+        <h3>Como funciona a tabela periódica?</h3>
         <figure>
             <img src="assets/tabela_periodica.png" alt="Tabela Periódica">
             <figcaption>Fonte: Toda Matéria</figcaption>
         </figure>
         <article id="tabPeriodica">
-            <h3>Como funciona a tabela periódica?</h3>
-            <p>A Tabela Periódica é um modelo que agrupa todos os elementos químicos conhecidos e suas propriedades.
+            <p class="pPeriodica">A Tabela Periódica é um modelo que agrupa todos os elementos químicos conhecidos e
+                suas propriedades.
                 <br>Eles estão organizados em ordem crescente de número atômico (número de prótons).<br>Cada quadrado
                 especifica o nome do elemento químico, seu símbolo e seu número atômico.
             </p>
