--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/stoichiometry-logo.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&display=swap" rel="stylesheet">
     <title>Estequiometria</title>
 </head>
 
 <body>
     <header>
+        <section class="sectionHeader">
         <h1>Bem-vindo ao site de Estequiometria!</h1>
-        <p>O intuito deste site é ajudar os estudantes a realizarem ou verificarem equações de elementos da tabela
+        <p>O intuito deste site é ajudar os estudantes a realizarem ou <br>verificarem equações de elementos da tabela
             periódica.</p>
-
+        
         <nav>
             <ul>
                 <li><a href="#tabPeriodica">Como funciona a tabela periódica?</a></li>
@@ -22,10 +26,14 @@
                 <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
+    </section>
+        <figure class="imageHeader">
+            <img class="chemistryImg" src="assets/chemistry 1.svg" alt="chemistry1.svg">
+        </figure>
     </header>
 
     <section class="tabelaPeriodica">
-        <h3>Como funciona a tabela periódica?</h3>
+        <h2>Como funciona a tabela periódica?</h2>
         <figure>
             <img src="assets/tabela_periodica.png" alt="Tabela Periódica">
             <figcaption>Fonte: Toda Matéria</figcaption>
