--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" href="assets/stoichiometry-logo.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,22 +15,28 @@
 <body>
     <header>
         <section class="sectionHeader">
-            <h1>Bem-vindo ao site de Estequiometria!</h1>
-            <p>O intuito deste site é ajudar os estudantes a realizarem ou <br>verificarem equações de elementos da
-                tabela
-                periódica.</p>
 
-            <nav>
-                <ul>
-                    <li><a href="#tabPeriodica">Como funciona a tabela periódica?</a></li>
-                    <li><a href="#equacaoFormulario">Monte sua equação</a></li>
-                    <li><a href="#contato">Contato</a></li>
-                </ul>
-            </nav>
+
+
+            <article class="navAndImage">
+                <nav>
+                    <h1>Bem-vindo ao site de Estequiometria!</h1>
+                    <p>O intuito deste site é ajudar os estudantes a realizarem ou <br>verificarem equações de elementos
+                        da
+                        tabela
+                        periódica.</p>
+                    <ul>
+                        <li><a href="#tabPeriodica">Como funciona a tabela periódica?</a></li>
+                        <li><a href="#equacaoFormulario">Monte sua equação</a></li>
+                        <li><a href="#contato">Contato</a></li>
+                    </ul>
+                </nav>
+
+                <figure class="imageHeader">
+                    <img src="assets/chemistry 1.svg" alt="chemistry1.svg">
+                </figure>
+            </article>
         </section>
-        <figure class="imageHeader">
-            <img src="assets/chemistry 1.svg" alt="chemistry1.svg">
-        </figure>
     </header>
 
     <section class="tabelaPeriodica">
